--- a/index.html
+++ b/index.html
@@ -37,12 +37,19 @@
         </div>
       </div>
 
-      <div class="d-flex flex-column col-12 col-md-8" id="today">
-        <h2>Weather</h2>
+      <div
+        class="
+          d-flex
+          flex-column
+          justify-content-start
+          align-items-start
+          col-12 col-md-8
+        "
+      >
+        <div class="d-flex flex-column" id="today"></div>
         <div class="d-flex flex-row" id="five-day">
-            <h3>w</h3>
-            <h3>w</h3>
-            <h3>w</h3>
+          <h2>hi</h2>
+        </div>
       </div>
     </main>
     <script src="./assets/js/script.js"></script>
