have five div cards that display the next 5 days of weather info

--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
         "
       >
         <div class="d-flex flex-column" id="today"></div>
-        <div class="d-flex flex-row" id="five-day">
-          <h2>hi</h2>
-        </div>
+        <div
+          class="d-flex flex-row justify-content-between"
+          id="five-day"
+        ></div>
       </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
