user searches for the city now using event handlers, and the containers displaying the weather reset themselves upon each search

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           justify-content-start
           align-items-start
           col-12 col-md-8
-        "
+        " id="weatherContainer"
       >
         <div class="d-flex flex-column" id="today"></div>
         <div
