searching for a city creates a button with the city's name that will access the data in the saved search

--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
 
         <!-- Previous Searches -->
 
-        <div class="card">
-          <button type="submit" class="btn">Search</button>
-          <button type="submit" class="btn">Search</button>
-          <button type="submit" class="btn">Search</button>
+        <div class="card" id ="pastSearches">
+
         </div>
       </div>
 
