--- a/index.html
+++ b/index.html
@@ -18,37 +18,44 @@
       <h1 class="">Weather Dashboard</h1>
     </header>
 
+    <!-- Search for a city  -->
     <main class="d-flex justify-content-between">
-      <div class="col-12 col-md-4">
+      <div class="col-12 col-md-3">
         <div class="card">
-          <h3 class="card-header">Search for a City:</h3>
+          <h3>Search for a City:</h3>
           <form id="city-form" class="card-body">
-            <input name="city" id="city" type="text" class="form-input" />
+            <input
+              name="city"
+              id="city"
+              type="text"
+              class="form-input"
+              placeholder="San Diego"
+            />
             <button type="submit" class="btn">Search</button>
           </form>
         </div>
 
         <!-- Previous Searches -->
-
-        <div class="card" id ="pastSearches">
-
-        </div>
+        <div class="card" id="pastSearches"></div>
       </div>
 
+      <!-- Weather Container -->
       <div
         class="
           d-flex
           flex-column
           justify-content-start
           align-items-start
-          col-12 col-md-8
-        " id="weatherContainer"
+          col-12 col-md-9
+        "
+        id="weatherContainer"
       >
+        <!-- One Day Forecast -->
         <div class="d-flex flex-column" id="today"></div>
-        <div
-          class="d-flex flex-row justify-content-between"
-          id="five-day"
-        ></div>
+
+        <h4 id = "fiveDayHeader"></h4>
+        <!-- Five Day Forecast -->
+        <div class="d-flex flex-column" id="five-day"></div>
       </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
