--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
     <title>Weather Dashboard</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -53,7 +57,7 @@
         <!-- One Day Forecast -->
         <div class="d-flex flex-column" id="today"></div>
 
-        <h4 id = "fiveDayHeader"></h4>
+        <h4 id="fiveDayHeader"></h4>
         <!-- Five Day Forecast -->
         <div class="d-flex flex-column" id="five-day"></div>
       </div>
