began editing css styles for a less generic look

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- Search for a city  -->
     <main class="d-flex justify-content-between">
-      <div class="col-12 col-md-3">
+      <div class="col-12 col-md-3" id="searchBar">
         <div class="card">
           <h3>Search for a City:</h3>
           <form id="city-form" class="card-body">
